--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
-    "sass": "^1.32.4",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
@@ -48,6 +47,7 @@
   },
   "jest": {
     "verbose": true,
+    "setupFiles": ["<rootDir>/src/helpers/getEntityType"],
     "setupFilesAfterEnv": [
       "<rootDir>/src/__test__/setupTest.js"
     ],
